Cambios
5 de Junio
- Se agregó la calculadora de matrices en las calculadoras.

6 de Junio 
- Se ha agregado un temporizador a la seccion de herramientas.
- Se ha creado una función "borrarConsola" que permite compatibilidad en otras plataformas
diferentes a Windows.
- Se ha agregado una nueva seccion de contraseñas e incorporado la función para generar contraseñas
alealtorias.

9 de Junio
- Se agregó la función que permite tomas una nota rápida

TODO

- Administrator de contraseñas
- Login del sistema